# neutral-consciousness-engine

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  PAPERS_IMPLEMENTATION.md  README.md  SECURITY.md  instructions-3.md  instructions.md  requirements.txt
.github/: pull_request_template.md
docs/: ANCIENT_ORIGINS_RESEARCH.md  ARCHITECTURE.md  ROS2_INSTALLATION_WINDOWS.md  WATANABE_PROTOCOL.md  em_modulation.md  whitepaper.md
ros2_ws/src/neutral_consciousness/: package.xml  setup.py
ros2_ws/src/neutral_consciousness/launch/: master_system.launch.py
ros2_ws/src/neutral_consciousness/neutral_consciousness/: __init__.py
ros2_ws/src/neutral_consciousness/neutral_consciousness/cortex_snn/: __init__.py  consciousness_metrics.py  criticality_monitor.py  dream_engine.py  em_driver.py  ephaptic_coupling.py  limbic_node.py  oscillatory_monitor.py  plv_estimator.py  reentrant_processor.py  sensory_tectum.py  test_consciousness_monitoring.py  visual_cortex.py
ros2_ws/src/neutral_consciousness/neutral_consciousness/neural_firewall/: __init__.py  homomorphic_encryption.py  latency_injector.py  traffic_monitor.py
ros2_ws/src/neutral_consciousness/neutral_consciousness/tests/: split_brain_test.py
ros2_ws/src/neutral_consciousness/resource/: neutral_consciousness
ros2_ws/src/neutral_consciousness/test/: test_em_modulation.py  test_neural_firewall.py
scripts/: simulate_consciousness.py
unity_project/Assets/RosSettings/: ROSConnectionSettings.json
unity_project/Assets/Scenes/: VirtualLab.unity
unity_project/Assets/Scripts/: RosBridgeClient.cs
