<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>neutral_consciousness</name>
  <version>0.1.0</version>
  <description>
    The Neutral Consciousness Engine - SNN-based Generative Model inspired by the 
    Watanabe Transfer Protocol approach. IMPORTANT: This is NOT the official work of 
    Professor Masataka Watanabe. We are independent researchers applying principles 
    from his publications.
  </description>
  <maintainer email="zae@todosloscobardesdelvalle.com">Zae Project Team</maintainer>
  <license>MIT</license>
  
  <url type="website">https://theconsciousness.ai/core</url>
  <url type="repository">https://github.com/Zae-Project/neutral-consciousness-engine</url>
  <url type="bugtracker">https://github.com/Zae-Project/neutral-consciousness-engine/issues</url>

  <!-- Build Dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>
  
  <!-- Runtime Dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <!-- Test Dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
